--- a/index.html
+++ b/index.html
@@ -37,19 +37,52 @@
             <div class="short-profile-content">
               <img src="profile-picture.jpeg" class="profile-picture" />
               <p class="text-basabasi">
-                Hai, Perkenalkan nama saya Frans Simamora, saya adalah Fresh graduate alumni
-                Politeknik Negeri Medan dengan Jurusan Teknik Komputer & Informatika
-                Program Studi Teknik Komputer. Saya senang menggeluti bidang Programming sejak
-                saya masih duduk pada bangku SMK hingga saat ini, tapi masih belum pandai juga WKWK,
-                karena saya masih belum serius mempelajarinya pada saat itu. Maka dari itu sudah saya
-                putuskan bahwa saya akan serius mempelajari Programming ini, khususnya dibidang Frontend Developer.
+                Hai, Perkenalkan nama saya Frans Simamora, saya adalah Fresh
+                graduate alumni Politeknik Negeri Medan dengan Jurusan Teknik
+                Komputer & Informatika Program Studi Teknik Komputer. Saya
+                senang menggeluti bidang Programming sejak saya masih duduk pada
+                bangku SMK hingga saat ini, tapi masih belum pandai juga WKWK,
+                karena saya masih belum serius mempelajarinya pada saat itu.
+                Maka dari itu sudah saya putuskan bahwa saya akan serius
+                mempelajari Programming ini, khususnya dibidang Frontend
+                Developer.
               </p>
             </div>
           </div>
         </div>
 
         <div class="myskills-container">
-          
+          <div class="my-skills">
+            <div class="title">
+              <h2>My Skills</h2>
+            </div>
+            <div class="list-skills">
+              <div class="html-skills">
+                <div class="img-card-skills">
+                  <img src="assets/pic/html-skills.png" />
+                  <div class="skill-bar">
+                    <p class="html-bar">90%</p>
+                  </div>
+                </div>
+              </div>
+              <div class="css-skills">
+                <div class="img-card-skills">
+                  <img src="assets/pic/css-skills.png" />
+                  <div class="skill-bar">
+                    <p class="css-bar">85%</p>
+                  </div>
+                </div>
+              </div>
+              <div class="javascript-skills">
+                <div class="img-card-skills">
+                  <img src="assets/pic/javascript-skills.png" alt="javascript" />
+                  <div class="skill-bar">
+                    <p class="javascript-bar">50%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- CONTENT END -->
