--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
             </div>
           </div>
         </div>
+
+        <div class="whyme-container">
+          <div class="whyme-pic-container">
+            <img src="assets/pic/happy-why.png" alt="whyshouldme?">
+          </div>
+          <div class="whyme-content-container">
+            <div class="whyme-title-content">
+              <h3>Why Should Me?</h3>
+            </div>
+            <div class="whyme-content">
+              <div class="1">1</div>
+              <div class="2">2</div>
+              <div class="3">3</div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- CONTENT END -->
 
