make responsive 767px

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Web Saya</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,7 +77,7 @@
               <div class="img-card-skills">
                 <img src="assets/pic/css-skills.png" />
                 <div class="skill-bar">
-                  <p class="css-bar">85%</p>
+                  <p class="css-bar">70%</p>
                 </div>
               </div>
             </div>
